Bug 335660 - Brush tool has strange behavior when selected on a vector layer
Summary: Brush tool has strange behavior when selected on a vector layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-01 19:44 UTC by Alicia Boya García (ntrrgc)
Modified: 2014-07-24 15:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alicia Boya García (ntrrgc) 2014-06-01 19:44:52 UTC
I don't know why brush tool should be enabled in vector layers in the first place, being it a raster tool. Currently its behavior is just weird.

Reproducible: Always

Steps to Reproduce:
1. Click the calligraphy tool.
2. Draw something.
3. Click the "Paint with brushes" tool.
Actual Results:  
It selects your last path. Weird.

Indeed, it seems just to act as the selection tool. You can select other paths and move them. More weird.

Furthermore, if you go back to a raster layer and try to draw something it doesn't. It keeps being the selection tool. Very weird.

Expected Results:  
I don't know. Maybe the brush tool not being enabled/shown at all on vector layers. And of course, the brush tool being a brush tool, not a selection tool. Always.
Comment 1 Sven Langkamp 2014-06-03 23:53:37 UTC
Git commit 8c29b77d23f5d19cc8ba15bec11b11753074b280 by Sven Langkamp.
Committed on 03/06/2014 at 23:49.
Pushed by langkamp into branch 'master'.

use flake/always as activation id for a Krita tools (Krita tools are always active as they handle locked/visible etc internally), that way we don't confuse the toolmanager with flake/dud

M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_colorpicker.h
M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_measure.h
M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_pan.h
M  +1    -1    krita/plugins/tools/tool_grid/kis_tool_grid.h
M  +2    -5    krita/ui/tool/kis_tool.h

http://commits.kde.org/calligra/8c29b77d23f5d19cc8ba15bec11b11753074b280
Comment 2 Halla Rempt 2014-07-24 15:41:53 UTC
Git commit 254e56c10099cdb158ff4f399695954a7a4ae145 by Boudewijn Rempt, on behalf of Sven Langkamp.
Committed on 03/06/2014 at 23:49.
Pushed by rempt into branch 'calligra/2.8'.

use flake/always as activation id for a Krita tools (Krita tools are always active as they handle locked/visible etc internally), that way we don't confuse the toolmanager with flake/dud

M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_colorpicker.h
M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_measure.h
M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_pan.h
M  +1    -1    krita/plugins/tools/tool_grid/kis_tool_grid.h
M  +2    -5    krita/ui/tool/kis_tool.h

http://commits.kde.org/calligra/254e56c10099cdb158ff4f399695954a7a4ae145