use flake/always as activation id for a Krita tools (Krita tools are always active as they handle locked/visible etc internally), that way we don't confuse the toolmanager with flake/dud

BUG:335660